--- a/8-supplement/1-stunting/04-severe-stunting.Rmd
+++ b/8-supplement/1-stunting/04-severe-stunting.Rmd
@@ -15,16 +15,20 @@ xxx
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# source(paste0(here::here(), "/0-config.R"))
 setwd("../../")
 source("0-config.R")
-#http://www.randigriffin.com/2017/04/25/how-to-knit-for-mysite.html
-
 ```
 
 
-```{r prev-re, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/shared/laz_secular_trend.png"))
+## Age-specific severe stunting prevalence
+```{r prev, echo = FALSE}
+#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-prev-overall_region--allage-primary.png"))
+include_graphics("figure-copies/fig-stunt-3-prev-overall_region--allage-primary.png")
 ```
 
 
+## Age-specific severe stunting incidence
+```{r inc, echo = FALSE}
+#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-inc-overall_region--allage-primary.png"))
+include_graphics("figure-copies/fig-stunt-3-inc-overall_region--allage-primary.png")
+```
