--- a/8-supplement/1-stunting/05-gestational-age.Rmd
+++ b/8-supplement/1-stunting/05-gestational-age.Rmd
@@ -15,16 +15,14 @@ xxx
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# source(paste0(here::here(), "/0-config.R"))
 setwd("../../")
 source("0-config.R")
-#http://www.randigriffin.com/2017/04/25/how-to-knit-for-mysite.html
-
 ```
 
 
 ```{r prev-re, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/shared/laz_secular_trend.png"))
+#include_graphics(paste0(here::here(), "/figures/shared/fig-GA-correction-sensitivity.png"))
+include_graphics("figure-copies/fig-GA-correction-sensitivity.png")
 ```
 
 
