--- a/8-supplement/1-stunting/05-gestational-age.Rmd
+++ b/8-supplement/1-stunting/05-gestational-age.Rmd
@@ -10,7 +10,8 @@ fontsize: 9pt
 
 \raggedright
 
-xxx
+[sentence summarizing data we do not have]
+To assess X, we compared stunting prevalence at birth when correcting at-birth Z-scores in cohorts measuring gestational age using the intergrowth standards to those in our primary analysis. As expected, the prevalence at birth decreased after correcting for gestational age, but this pattern varied between cohorts. I think this is largely from the poor quality of gestational age at birth data. Some prevalences increase after GA correction because of many late-term births based on GA. SAS-Compfeed had a dramatic decrease in prevalence, but more than 3/4 of infants are preterm based on the GA data. One note: I'm dropping observations with GA outside of the intergrowth standards range for both the corrected and uncorrected data. 
 
 ```{r setup, include=FALSE}
 library(knitr)
