remove warning message causing code, add new ga plot

--- a/8-supplement/1-stunting/01-fixed-effects.Rmd
+++ b/8-supplement/1-stunting/01-fixed-effects.Rmd
@@ -5,8 +5,8 @@ The primary analyses presented in this manuscript pooled across individual studi
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-setwd("../../")
-source("0-config.R")
+# setwd("../../")
+# source("0-config.R")
 ```
 
 <!-- ##################################################################################### -->
