--- a/8-supplement/1-stunting/02-secular-trends.Rmd
+++ b/8-supplement/1-stunting/02-secular-trends.Rmd
@@ -15,8 +15,8 @@ This study included cohorts that measured child growth from 1969 to 2014. To ass
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-setwd("../../")
-source("0-config.R")
+# setwd("../../")
+# source("0-config.R")
 
 ```
 
