--- a/8-supplement/1-stunting/07-quality-assurance.Rmd
+++ b/8-supplement/1-stunting/07-quality-assurance.Rmd
@@ -15,9 +15,8 @@ Add text
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-setwd("../../")
-source("0-config.R")
-
+# setwd("../../")
+# source("0-config.R")
 ```
 
 ```{r qa, echo = FALSE}
