--- a/8-supplement/2-wasting/01-fixed-effects.RMD
+++ b/8-supplement/2-wasting/01-fixed-effects.RMD
@@ -13,3 +13,81 @@ fontsize: 9pt
 
 The primary analyses presented in this manuscript pooled across individual studies using random effects. Inferences about estimates from fixed effects models are restricted to only the included studies.[^1] The random effects approach was more conservative in the presence of study heterogeneity, as evidenced by larger confidence intervals around each point estimates. Overall, the inference from results produced by each method was similar. 
 
+```{r setup, include=FALSE}
+library(knitr)
+knitr::opts_chunk$set(echo = TRUE)
+# setwd("../../")
+# source("0-config.R")
+```
+
+<!-- ##################################################################################### -->
+## Age-specific prevalence
+
+<!-- ### Random effects -->
+<!-- ```{r prev-re, echo = FALSE} -->
+<!-- # include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary.png")) -->
+<!-- #include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary.png") -->
+
+<!-- ``` -->
+
+<!-- ### Fixed effects -->
+```{r prev-primary_FE, echo = FALSE}
+# include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary_FE.png"))
+include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary_FE.png")
+```
+
+
+
+## Age-specific incidence
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-cuminc-overall_region--allage-primary_FE.png")
+
+```
+
+## Age-specific incidence rate
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-ir-overall_region--allage-primary_FE.png")
+
+```
+
+## Age-specific recovery
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-rec-overall_region--allage-primary_FE.png")
+
+```
+
+## Age-specific prevalence of severe wasting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-3-prev-overall_region--allage-primary_FE.png")
+
+```
+
+## Age-specific longitudinal prevalence of persistent wasting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-perswast_plot_FE.png")
+
+```
+
+## Age-specific prevalence of concurrent wasting and stunting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-co-overall_region--allage-primary_FE.png")
+
+```
+
+## Age-specific prevalence of underweight (weight-for-age Z-score < -2)
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-uwt-overall_region--allage-primary_FE.png")
+
+```
+
+
+
+
+[^1]: Hedges, L. V. & Vevea, J. L. Fixed- and random-effects models in meta-analysis. Psychol. Methods 3, 486–504 (1998).
