changed 1-stunting rmds to use normal figure paths

--- a/8-supplement/1-stunting/03-secular-trends.Rmd
+++ b/8-supplement/1-stunting/03-secular-trends.Rmd
@@ -15,15 +15,15 @@ This study included cohorts that measured child growth from 1969 to 2014. To ass
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# setwd("../../")
-# source("0-config.R")
+setwd("../../")
+source("0-config.R")
 
 ```
 
 
 ```{r prev-re, echo = FALSE}
-# include_graphics(paste0(here::here(), "/figures/shared/laz_secular_trend.png"))
-include_graphics("figure-copies/laz_secular_trend.png")
+include_graphics(paste0(here::here(), "/figures/shared/laz_secular_trend.png"))
+#include_graphics("figure-copies/laz_secular_trend.png")
 ```
 
 
