--- a/8-supplement/1-stunting/05-DHS-ki-countries.Rmd
+++ b/8-supplement/1-stunting/05-DHS-ki-countries.Rmd
@@ -15,8 +15,8 @@ In the manuscript, we compared the mean length-for-age Z-score by age and region
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# setwd("../../")
-# source("0-config.R")
+setwd("../../")
+source("0-config.R")
 ```
 
 [Figure to be added]
