--- a/8-supplement/1-stunting/02-severe-stunting.Rmd
+++ b/8-supplement/1-stunting/02-severe-stunting.Rmd
@@ -15,20 +15,20 @@ Below, we display plots for the age-specific prevalence and cumulative incidence
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# setwd("../../")
-# source("0-config.R")
+setwd("../../")
+source("0-config.R")
 ```
 
 
 ## Age-specific severe stunting prevalence
 ```{r prev, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-prev-overall_region--allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-3-prev-overall_region--allage-primary.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-prev-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-3-prev-overall_region--allage-primary.png")
 ```
 
 
 ## Age-specific severe stunting incidence
 ```{r inc, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-inc-overall_region--allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-3-inc-overall_region--allage-primary.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-3-inc-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-3-inc-overall_region--allage-primary.png")
 ```
