--- a/8-supplement/1-stunting/06-cohort-specific.Rmd
+++ b/8-supplement/1-stunting/06-cohort-specific.Rmd
@@ -8,8 +8,8 @@ Here, we present cohort-specific estimates of length-for-age Z-score by age, age
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# setwd("../../")
-# source("0-config.R")
+setwd("../../")
+source("0-config.R")
 ```
 
 <!-- ##################################################################################### -->
@@ -17,20 +17,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Africa
 ```{r laz-africa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-africa-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-quant-cohort-africa-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-africa-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-quant-cohort-africa-allage-primary.png")
 ```
 
 ### Latin America
 ```{r laz-la, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-latamer-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-quant-cohort-latamer-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-latamer-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-quant-cohort-latamer-allage-primary.png")
 ```
 
 ### South Asia
 ```{r laz-sa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-asia-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-quant-cohort-asia-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-quant-cohort-asia-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-quant-cohort-asia-allage-primary.png")
 ```
 
 
@@ -39,20 +39,20 @@ include_graphics("figure-copies/fig-laz-2-quant-cohort-asia-allage-primary.png")
 
 ### Africa
 ```{r prev-africa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-africa-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-prev-cohort-africa-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-africa-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-prev-cohort-africa-allage-primary.png")
 ```
 
 ### Latin America
 ```{r prev-la, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-latamer-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-prev-cohort-latamer-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-latamer-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-prev-cohort-latamer-allage-primary.png")
 ```
 
 ### South Asia
 ```{r prev-sa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-asia-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-prev-cohort-asia-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-prev-cohort-asia-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-prev-cohort-asia-allage-primary.png")
 ```
 
 
@@ -61,20 +61,20 @@ include_graphics("figure-copies/fig-stunt-2-prev-cohort-asia-allage-primary.png"
 
 ### Africa
 ```{r inc-africa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-africa-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-inc-cohort-africa-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-africa-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-inc-cohort-africa-allage-primary.png")
 ```
 
 ### Latin America
 ```{r inc-la, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-latamer-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-inc-cohort-latamer-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-latamer-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-inc-cohort-latamer-allage-primary.png")
 ```
 
 ### South Asia
 ```{r inc-sa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-asia-allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-inc-cohort-asia-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-stunt-2-inc-cohort-asia-allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-inc-cohort-asia-allage-primary.png")
 ```
 
 
@@ -83,20 +83,20 @@ include_graphics("figure-copies/fig-stunt-2-inc-cohort-asia-allage-primary.png")
 
 ### Africa
 ```{r lvel-africa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-africa-allage-primary.png"))
-include_graphics("figure-copies/fig-length-2-length_vel-cohort-africa-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-africa-allage-primary.png"))
+# include_graphics("figure-copies/fig-length-2-length_vel-cohort-africa-allage-primary.png")
 ```
 
 ### Latin America
 ```{r lvel-la, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-latamer-allage-primary.png"))
-include_graphics("figure-copies/fig-length-2-length_vel-cohort-latamer-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-latamer-allage-primary.png"))
+# include_graphics("figure-copies/fig-length-2-length_vel-cohort-latamer-allage-primary.png")
 ```
 
 ### South Asia
 ```{r lvel-sa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-asia-allage-primary.png"))
-include_graphics("figure-copies/fig-length-2-length_vel-cohort-asia-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-length-2-length_vel-cohort-asia-allage-primary.png"))
+# include_graphics("figure-copies/fig-length-2-length_vel-cohort-asia-allage-primary.png")
 ```
 
 
@@ -105,19 +105,19 @@ include_graphics("figure-copies/fig-length-2-length_vel-cohort-asia-allage-prima
 
 ### Africa
 ```{r lazvel-africa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-africa-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-africa-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-africa-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-africa-allage-primary.png")
 ```
 
 ### Latin America
 ```{r lazvel-la, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-latamer-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-latamer-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-latamer-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-latamer-allage-primary.png")
 ```
 
 ### South Asia
 ```{r lazvel-sa, echo = FALSE}
-# include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-asia-allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-asia-allage-primary.png")
+include_graphics(paste0(fig_dir, "stunting/fig-laz-2-laz_vel-cohort-asia-allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-laz_vel-cohort-asia-allage-primary.png")
 ```
 
