--- a/8-supplement/1-stunting/07-excluding-PROBIT.Rmd
+++ b/8-supplement/1-stunting/07-excluding-PROBIT.Rmd
@@ -15,8 +15,8 @@ Only one cohort from Europe met the inclusion criteria for this study -- the PRO
 ```{r setup, include=FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
-# setwd("../../")
-# source("0-config.R")
+setwd("../../")
+source("0-config.R")
 
 ```
 
@@ -25,14 +25,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Including PROBIT
 ```{r mean, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-laz-2-mean-overall_region--allage-primary.png"))
-include_graphics("figure-copies/fig-laz-2-mean-overall_region--allage-primary.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-laz-2-mean-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-laz-2-mean-overall_region--allage-primary.png")
 ```
 
 ### Excluding PROBIT
 ```{r mean-np, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-laz-2-mean-overall_region--allage-primary_no_probit.png"))
-include_graphics("figure-copies/fig-laz-2-mean-overall_region--allage-primary_no_probit.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-laz-2-mean-overall_region--allage-primary_no_probit.png"))
+# include_graphics("figure-copies/fig-laz-2-mean-overall_region--allage-primary_no_probit.png")
 ```
 
 
@@ -41,14 +41,14 @@ include_graphics("figure-copies/fig-laz-2-mean-overall_region--allage-primary_no
 
 ### Including PROBIT
 ```{r prev, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-prev-overall_region--allage-primary.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-prev-overall_region--allage-primary.png")
 ```
 
 ### Excluding PROBIT
 ```{r prev-np, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary_no_probit.png"))
-include_graphics("figure-copies/fig-stunt-2-prev-overall_region--allage-primary_no_probit.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary_no_probit.png"))
+# include_graphics("figure-copies/fig-stunt-2-prev-overall_region--allage-primary_no_probit.png")
 ```
 
 <!-- ##################################################################################### -->
@@ -56,14 +56,14 @@ include_graphics("figure-copies/fig-stunt-2-prev-overall_region--allage-primary_
 
 ### Including PROBIT
 ```{r inc, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary.png"))
-include_graphics("figure-copies/fig-stunt-2-inc-overall_region--allage-primary.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-prev-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-inc-overall_region--allage-primary.png")
 ```
 
 ### Excluding PROBIT
 ```{r inc-np, echo = FALSE}
-#include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-inc-overall_region--allage-primary.png ))
-include_graphics("figure-copies/fig-stunt-2-inc-overall_region--allage-primary_no_probit.png")
+include_graphics(paste0(here::here(), "/figures/stunting/fig-stunt-2-inc-overall_region--allage-primary.png"))
+# include_graphics("figure-copies/fig-stunt-2-inc-overall_region--allage-primary_no_probit.png")
 ```
 
 
