suppliment fig updates

--- a/8-supplement/2-wasting/03-no-kenaba.Rmd
+++ b/8-supplement/2-wasting/03-no-kenaba.Rmd
@@ -9,3 +9,81 @@ fontsize: 9pt
 ---
 
 \raggedright
+
+
+
+```{r setup, include=FALSE}
+library(knitr)
+knitr::opts_chunk$set(echo = TRUE)
+# setwd("../../")
+# source("0-config.R")
+```
+
+<!-- ##################################################################################### -->
+## Age-specific prevalence
+
+<!-- ### Random effects -->
+<!-- ```{r prev-re, echo = FALSE} -->
+<!-- # include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary.png")) -->
+<!-- #include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary.png") -->
+
+<!-- ``` -->
+
+<!-- ### Fixed effects -->
+```{r prev-primary-no-Kenaba-BW, echo = FALSE}
+# include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary-no-Kenaba-BW.png"))
+include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary-no-Kenaba-BW.png")
+```
+
+
+
+## Age-specific incidence
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-cuminc-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+## Age-specific incidence rate
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-ir-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+## Age-specific recovery
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-rec-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+## Age-specific prevalence of severe wasting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-3-prev-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+## Age-specific longitudinal prevalence of persistent wasting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-perswast_plot-no-Kenaba-BW.png")
+
+```
+
+## Age-specific prevalence of concurrent wasting and stunting
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-co-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+## Age-specific prevalence of underweight (weight-for-age Z-score < -2)
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-wast-2-uwt-overall_region--allage-primary-no-Kenaba-BW.png")
+
+```
+
+
