--- a/8-supplement/3-causes-and-consequences/06-no-PROBIT.Rmd
+++ b/8-supplement/3-causes-and-consequences/06-no-PROBIT.Rmd
@@ -1,4 +1,4 @@
-# Dropping PROBIT {#no-PROBIT}
+# Dropping PROBIT Trial {#no-PROBIT}
 
 ---
 output:
@@ -9,3 +9,16 @@ fontsize: 9pt
 ---
 
 \raggedright
+
+The PROBIT randomized control trial, conducted in Belarus, is the only study from Europe included in the manuscript "Causes and consequences of child growth faltering in low resource settings". While Belarus was a middle-income country during the 1990's the environmental and nutritional conditions, as well as infectious diseases patterns, are different from other included studies from South Asia, Africa, and Latin America, and prevalence of stunting and wasting was far lower. Here, we examine random-effects pooled attributable differences in LAZ and WLZ at 24 months (the analysis presented in Figure 2 of the primary manuscript), calculated with and without estimates from the PROBIT trial. Only exposures measured in the PROBIT trial are included. While point estimates and rank ordering of risk factors vary slightly after excluding PROBIT, the changes are not consequential.
+
+```{r setup, include=FALSE}
+library(knitr)
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
+```{r, echo = FALSE}
+include_graphics("figure-copies/fig-PAR-Probit-sensitivity.png")
+
+```
