--- a/8-supplement/2-wasting/03-no-kenaba.Rmd
+++ b/8-supplement/2-wasting/03-no-kenaba.Rmd
@@ -19,20 +19,18 @@ knitr::opts_chunk$set(echo = TRUE)
 # source("0-config.R")
 ```
 
-<!-- ##################################################################################### -->
-## Age-specific prevalence
+## Mean WLZ by region
 
-<!-- ### Random effects -->
-<!-- ```{r prev-re, echo = FALSE} -->
-<!-- # include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary.png")) -->
-<!-- #include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary.png") -->
-
-<!-- ``` -->
-
-<!-- ### Fixed effects -->
 ```{r prev-primary-no-Kenaba-BW, echo = FALSE}
 # include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary-no-Kenaba-BW.png"))
-include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary-no-Kenaba-BW.png")
+include_graphics("figure-copies/WLZ_by_region-no-Kenaba-BW.png")
+```
+
+## Age-specific prevalence
+
+```{r prev-primary-no-Kenaba-BW, echo = FALSE}
+# include_graphics(paste0(fig_dir, "wasting/fig-wast-2-prev-overall_region--allage-primary-no-Kenaba-BW.png"))
+include_graphics("figure-copies/fig-wast-prev-no-Kenaba-BW.png")
 ```
 
 
@@ -40,35 +38,35 @@ include_graphics("figure-copies/fig-wast-2-prev-overall_region--allage-primary-n
 ## Age-specific incidence
 
 ```{r, echo = FALSE}
-include_graphics("figure-copies/fig-wast-2-cuminc-overall_region--allage-primary-no-Kenaba-BW.png")
+include_graphics("figure-copies/fig-wast-ci-no-Kenaba-BW")
 
 ```
 
 ## Age-specific incidence rate
 
 ```{r, echo = FALSE}
-include_graphics("figure-copies/fig-wast-2-ir-overall_region--allage-primary-no-Kenaba-BW.png")
+include_graphics("figure-copies/fig-wast-ir-no-Kenaba-BW.png.png")
 
 ```
 
 ## Age-specific recovery
 
 ```{r, echo = FALSE}
-include_graphics("figure-copies/fig-wast-2-rec-overall_region--allage-primary-no-Kenaba-BW.png")
+include_graphics("figure-copies/fig-wast-rec-no-Kenaba-BW.png")
 
 ```
 
 ## Age-specific prevalence of severe wasting
 
 ```{r, echo = FALSE}
-include_graphics("figure-copies/fig-wast-3-prev-overall_region--allage-primary-no-Kenaba-BW.png")
+include_graphics("figure-copies/fig-sev-wast-no-Kenaba-BW.png")
 
 ```
 
 ## Age-specific longitudinal prevalence of persistent wasting
 
 ```{r, echo = FALSE}
-include_graphics("figure-copies/fig-perswast_plot-no-Kenaba-BW.png")
+include_graphics("figure-copies/fig-pers-wast-no-Kenaba-BW.png")
 
 ```
 
